syntax = "proto3";


package ambulance_chat;

service AmbulanceChatService {
  rpc sendMessage(stream ChatMessage) returns (stream ChatMessage) {}
}

message ChatMessage {
 string name = 1;
 string message = 2;
}
